--- a/index1.html
+++ b/index1.html
@@ -53,7 +53,8 @@
                 <div class="w-col w-col-12 w-clearfix">
                     <p>Gisto is a Cross-platform gist snippets management desktop application that allows you and your
                         team share code snippets fast and easily. Based on GitHub Gists Infrastructure which means you
-                        can use all your existing snippets by connecting your GitHub account! <a href=""><b>More &raquo;</a></b></p>
+                        can use all your existing snippets by connecting your GitHub account! <a href=""><b>More &raquo;</a></b>
+                    </p>
                     <iframe id="ytplayer" type="text/html" width="100%" height="500"
                             src="https://www.youtube.com/embed/lICNPYgv7Ac?controls=0&modestbranding=1&rel=0&showinfo=0&color=white&theme=light"
                             frameborder="0"></iframe>
