Add more pages and content

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -16,14 +16,14 @@ title: Documentation | Gisto
                 <h2>NAV</h2>
                 <nav>
                     <ul>
-                        <li><a href="#pre">Preface</a></li>
-                        <li><a href="#tags">Tag gist</a></li>
-                        <li><a href="#devs">For developers</a></li>
+                        <li><a class="innsite" href="#pre">Preface</a></li>
+                        <li><a class="innsite" href="#tags">Tag gist</a></li>
+                        <li><a class="innsite" href="#devs">For developers</a></li>
                     </ul>
                 </nav>
             </div>
 
-            <div class="w-col w-col-9 w-clearfix">
+            <div class="w-col w-col-9 w-clearfix main">
 
                 <h2 id="pre">Preface:</h2>
 
@@ -44,18 +44,18 @@ title: Documentation | Gisto
                 <h2 id="devs">Setting up for development</h2>
                 <h4>Pre-installed requirements:</h4>
                 <ul class="icons-ul">
-                    <li class="icons-li"><i class="icon-angle-right"></i> IDE of your choosing</li>
-                    <li class="icons-li"><i class="icon-angle-right"></i> <a href="http://git-scm.com/downloads">GIT</a>
+                    <li class="icons-li"><i class="icon-chevron-sign-right"></i> IDE of your choosing</li>
+                    <li class="icons-li"><i class="icon-chevron-sign-right"></i> <a href="http://git-scm.com/downloads">GIT</a>
                         - distributed version control
                     </li>
-                    <li class="icons-li"><i class="icon-angle-right"></i> <a href="http://nodejs.org/">Node.js</a> -
+                    <li class="icons-li"><i class="icon-chevron-sign-right"></i> <a href="http://nodejs.org/">Node.js</a> -
                         server-side software system written in JavaScript
                     </li>
-                    <li class="icons-li"><i class="icon-angle-right"></i> <a
+                    <li class="icons-li"><i class="icon-chevron-sign-right"></i> <a
                             href="https://github.com/rogerwang/node-webkit#downloads">Node-webkit</a> - app runtime
                         based on Chromium and node.js
                     </li>
-                    <li class="icons-li"><i class="icon-angle-right"></i> <a href="http://gruntjs.com/">Grunt</a> - the
+                    <li class="icons-li"><i class="icon-chevron-sign-right"></i> <a href="http://gruntjs.com/">Grunt</a> - the
                         JavaScript Task Runner
                     </li>
                 </ul>
