--- a/faq/index.html
+++ b/faq/index.html
@@ -16,9 +16,9 @@ title: Frequently asked questions | Gisto
                 <h2>QUESTIONS</h2>
                 <nav>
                     <ul>
-                        <li><a href="#pre">How do I do that cool thing I saw on TV last night?</a></li>
-                        <li><a href="#tags">Tag gist</a></li>
-                        <li><a href="#devs">For developers</a></li>
+                        <li><a class="innsite" href="#q1">How do I do that cool thing I saw on TV last night?</a></li>
+                        <li><a class="innsite" href="#q2">Some question?</a></li>
+                        <li><a class="innsite" href="#q2">For developers?</a></li>
                     </ul>
                 </nav>
             </div>
