--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 <section class="boxes">
     <div class="w-container">
         <div class="w-row">
-            <a href="#" class="w-col w-col-4 w-clearfix box bg-grey txt-white uppercase">
+            <a href="/features/" class="w-col w-col-4 w-clearfix box bg-grey txt-white uppercase">
                 <i class="icon-fire-extinguisher icon-4x pull-left"></i>
 
                 <h3>Features</h3>
@@ -15,7 +15,7 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
                     <i>List of features and additions</i> <i class="icon-chevron-right"></i>
                 </span>
             </a>
-            <a href="#" class="w-col w-col-4 w-clearfix box bg-greyer txt-white uppercase">
+            <a href="#about" class="w-col w-col-4 w-clearfix box bg-greyer txt-white uppercase innsite">
                 <i class="icon-laptop icon-4x pull-left"></i>
 
                 <h3>Multi-platform</h3>
@@ -23,7 +23,7 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
                     <i>Avaliable on Windows, Linux and OSX</i> <i class="icon-chevron-right"></i>
                 </span>
             </a>
-            <a href="#" class="w-col w-col-4 w-clearfix box bg-tomato txt-white uppercase">
+            <a href="#download" class="w-col w-col-4 w-clearfix box bg-tomato txt-white uppercase innsite">
                 <i class="icon-download-alt icon-4x pull-left"></i>
 
                 <h3>Download</h3>
@@ -86,14 +86,20 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 </section>
 
 
-<h1>About <span class="gisto">&lt;/Gisto&gt;</span></h1>
+<h1 id="about">About <span class="gisto">&lt;/Gisto&gt;</span></h1>
 
 <section class="whiter boxes">
 
     <div class="w-container">
         <div class="w-row">
 
-            <div class="w-col w-col-4 w-clearfix">
+            <div class="w-col w-col-3 w-clearfix">
+                <h3>The <b>what</b></h3>
+
+                <p>Gisto is a cross platform. It can run on Windows, OSX and linux. It runs and acts exactly the same on each platform.</p>
+            </div>
+
+            <div class="w-col w-col-3 w-clearfix">
                 <h3>The <b>why</b></h3>
 
                 <p>Gisto started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code
@@ -102,7 +108,7 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
                     You may think of Gisto as Evernote for code.</p>
             </div>
 
-            <div class="w-col w-col-4 w-clearfix the-who">
+            <div class="w-col w-col-3 w-clearfix the-who">
                 <h3>The <b>who</b></h3>
 
                 <p>
@@ -112,7 +118,7 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 
             </div>
 
-            <div class="w-col w-col-4 w-clearfix">
+            <div class="w-col w-col-3 w-clearfix">
                 <h3>The <b>how</b></h3>
 
                 <p>Gisto made using HTML5/CSS3 it is built with Angular.js on top of Node.js runned by node-webkit.
@@ -124,7 +130,7 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 </section>
 
 
-<h1>Downloads</h1>
+<h1 id="download">Downloads</h1>
 <section class="whiter boxes">
 
     <div class="w-container">
@@ -182,6 +188,10 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
             <div class="center-holder">
                 <a href="download/" class="btn bg-grey txt-white btn-center">
                     Mirrors and prev. versions <i class="icon-arrow-right"></i>
+                </a>
+
+                <a href="changelog/" class="btn bg-grey txt-white btn-center">
+                    Change log
                 </a>
             </div>
         </div>
