--- a/changelog/index.html
+++ b/changelog/index.html
@@ -19,6 +19,7 @@ title: Gisto | Changelog
            <h2>Versions</h2>
 
             <ul>
+                <li><a href="#v0.2.3b">0.2.3b</a></li>
                 <li><a href="#v0.2.2b">0.2.2b</a></li>
                 <li><a href="#v0.2.1b">0.2.1b</a></li>
                 <li><a href="#v0.2.0b">0.2.0b</a></li>
@@ -32,6 +33,15 @@ title: Gisto | Changelog
         </div>
 
         <div class="eightcol last">
+
+            <h2 id="v0.2.3b">0.2.3 beta</h2>
+
+            <h4>Maintains release</h4>
+            <p> - Fix: Fixed Fork gist bug</p>
+            <p> - Fix: Switch token generation to the new oAuth token generation per application</p>
+            <p> - New: Copy gist ID to clipboard</p>
+            <p> - Small UI/CSS fixes</p>
+            <p> - Repository maintains</p>
 
             <h2 id="v0.2.2b">0.2.2 beta</h2>
 
