--- a/faq/index.html
+++ b/faq/index.html
@@ -25,7 +25,7 @@ title: Frequently asked questions | Gisto
 
             <div class="w-col w-col-9 w-clearfix">
 
-                <h2>Question #1</h2>
+                <h2 id="q1">Question #1</h2>
 
                 <p>Feature number 1 from the list of features. Feature number 1 from the list of features. Feature
                     number 1 from the list of features.</p>
