--- a/index.html
+++ b/index.html
@@ -4,40 +4,7 @@ name: home
 title: Gisto | Snippets made awesome | Manage your github gists on desktop
 ---
 
-<section class="boxes">
-    <div class="w-container">
-        <div class="w-row">
-            <a href="/features/" class="w-col w-col-4 w-clearfix box bg-grey txt-white uppercase">
-                <i class="icon-fire-extinguisher icon-4x pull-left"></i>
-
-                <h3>Features</h3>
-                <span>
-                    <i>List of features and additions</i> <i class="icon-chevron-right"></i>
-                </span>
-            </a>
-            <a href="#about" class="w-col w-col-4 w-clearfix box bg-greyer txt-white uppercase innsite">
-                <i class="icon-laptop icon-4x pull-left"></i>
-
-                <h3>Multi-platform</h3>
-                <span>
-                    <i>Avaliable on Windows, Linux and OSX</i> <i class="icon-chevron-right"></i>
-                </span>
-            </a>
-            <a href="#download" class="w-col w-col-4 w-clearfix box bg-tomato txt-white uppercase innsite">
-                <i class="icon-download-alt icon-4x pull-left"></i>
-
-                <h3>Download</h3>
-                <span>
-                    <i>Downloads, mirrors and prev. versions</i> <i class="icon-chevron-right"></i>
-                </span>
-            </a>
-        </div>
-    </div>
-</section>
-
-
-<h1>Features</h1>
-<section class="whiter boxes">
+<section class="whiter boxes features-boxes">
 
 
     <div class="w-container">
