Add closing div in index.html (oops), Fixed footer on small screen.

--- a/index.html
+++ b/index.html
@@ -162,4 +162,5 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
                 </a>
             </div>
         </div>
+    </div>
 </section>
