Fix mobile, add some texts. Fix layout glitches.

--- a/download/index.html
+++ b/download/index.html
@@ -8,10 +8,10 @@ title: Downloads | Gisto
 
 <section class="whiter boxes">
 
-    <div class="w-container">
+    <div class="w-container content-container">
         <div class="w-row">
 
-            <div class="w-col w-col-3 w-clearfix">
+            <div class="w-col w-col-3 w-clearfix side-container">
 
                 <h2>NAV</h2>
                 <nav>
