--- a/features/index.html
+++ b/features/index.html
@@ -9,7 +9,7 @@ title: Features | Gisto
 <section class="whiter boxes">
 
 
-    <div class="w-container main">
+    <div class="w-container main content-container">
         <div class="w-row">
 
 
