--- a/documentation/index.html
+++ b/documentation/index.html
@@ -9,10 +9,10 @@ title: Documentation | Gisto
 <section class="whiter boxes">
 
 
-    <div class="w-container">
+    <div class="w-container content-container">
         <div class="w-row">
 
-            <div class="w-col w-col-3 w-clearfix">
+            <div class="w-col w-col-3 w-clearfix side-container">
                 <h2>NAV</h2>
                 <nav>
                     <ul>
