--- a/faq/index.html
+++ b/faq/index.html
@@ -8,30 +8,27 @@ title: Frequently asked questions | Gisto
 
 <section class="whiter boxes">
 
-    <div class="w-container">
+    <div class="w-container content-container">
         <div class="w-row">
 
-            <div class="w-col w-col-3 w-clearfix">
+            <div class="w-col w-col-3 w-clearfix side-container">
 
                 <h2>QUESTIONS</h2>
                 <nav>
                     <ul>
-                        <li><a class="innsite" href="#q1">Where's the changelog?</a></li>
                         <li><a class="innsite" href="#q2">Authentication</a></li>
                         <li><a class="innsite" href="#q3">Do you use backend server?</a></li>
-                        <li><a class="innsite" href="#q4">How secure is Gisto?</a></li>
-                        <li><a class="innsite" href="#q5">Do you plan to support / add support for &laquo;future-name-here&raquo;?</a>
-                        </li>
-                        <li><a class="innsite" href="#q5">Why Gisto exists?</a></li>
+                        <li><a class="innsite" href="#q4">Who can see my gists?</a></li>
+                        <li><a class="innsite" href="#q5">Do you plan to support / add support for [future-name-here]?</a></li>
+                        <li><a class="innsite" href="#q6">Why Gisto exists?</a></li>
+                        <li><a class="innsite" href="#q7">Under the hood</a></li>
+                        <li><a class="innsite" href="#q8">Issues, bug reporting and pull and feature requests</a></li>
                     </ul>
                 </nav>
             </div>
 
             <div class="w-col w-col-9 w-clearfix">
 
-                <h2 id="q1">Where's the changelog?</h2>
-
-                <p>We have a change.log page listing all recent changes by version <a href="/changelog">here</a></p>
 
                 <h2 id="q2">Authentication</h2>
 
@@ -45,7 +42,6 @@ title: Frequently asked questions | Gisto
 
                 <p>This token will be saved permanently until you log out.</p>
 
-
                 <h2 id="q3">Do you use backend server?</h2>
 
                 <p>Gisto is using GitHub gist API and communicates directly with Github, no 3rd party server or database
@@ -56,17 +52,28 @@ title: Frequently asked questions | Gisto
                     accept.
                 </p>
 
-                <h2 id="q4">How secure is Gisto?</h2>
+                <h2 id="q4">Who can see my gists?</h2>
 
                 <p>Gisto ipsum codelor app sit a met.</p>
 
-                <h2 id="q5">Do you plan to support / add support for &laquo;future-name-here&raquo;?</h2>
+
+                <h2 id="q5">Do you plan to support / add support for [<i>future-name-here</i>]?</h2>
 
                 <p>Gisto ipsum codelor app sit a met.</p>
 
                 <h2 id="q6">Why Gisto exists?</h2>
 
+                <p>Gisto started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code snippet solution. You may think of Gisto as Evernote for code.</p>
+
+                <h2 id="q7">Under the hood</h2>
+
                 <p>Gisto ipsum codelor app sit a met.</p>
+
+                <h2 id="q8">Issues, bug reporting and pull and feature requests</h2>
+
+                <p>Please feel free to add a bug / feature request / suggestions to the <a href="https://github.com/Gisto/Gisto/issues">issue tracker</a>.
+                    Pull requests are also very welcome as well.
+                </p>
 
             </div>
 
