--- a/changelog/index.html
+++ b/changelog/index.html
@@ -19,6 +19,7 @@ title: Gisto | Changelog
            <h2>Versions</h2>
 
             <ul>
+                <li><a href="#v0.2.4b">0.2.4b</a></li>
                 <li><a href="#v0.2.3b">0.2.3b</a></li>
                 <li><a href="#v0.2.2b">0.2.2b</a></li>
                 <li><a href="#v0.2.1b">0.2.1b</a></li>
@@ -33,6 +34,18 @@ title: Gisto | Changelog
         </div>
 
         <div class="eightcol last">
+
+            <h2 id="v0.2.4b">0.2.4 beta</h2>
+            <p> - Fix: Editor overflow where pasted text would appear visually broken</p>
+            <p> - Fix: Better controll of editor size - line based</p>
+            <p> - Update: ACE editor with additions to 2 new themes and a few new highlighters</p>
+            <p> - Fix: When Cancelling a gist edit now the gist is returned to original state</p>
+            <p> - New: Emmet and status bar plugins to ace editor</p>
+            <p> - New: Drag & drop support for folders and sub-folders</p>
+            <p> - New: Auto completion to ace editor (enable from settings)</p>
+            <p> - New: Range selector to control application size in settings. Fixes #69</p>
+            <p> - New: Confirmation when deleting a file from a gist. Fixes #76.</p>
+            <p> - Update: Comments are now paginated due to changes in GitHub API.</p>
 
             <h2 id="v0.2.3b">0.2.3 beta</h2>
 
