Add github to social buttons

--- a/index.html
+++ b/index.html
@@ -58,11 +58,15 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 
 <div class="container features" id="features">
 
-    <div class="container align-center">
+    <div class="container align-center socials">
         <span class='st_twitter_hcount' displayText='Tweet' st_url="http://www.gistoapp.com" st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
         <span class='st_facebook_hcount' displayText='Facebook' st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
         <span class='st_googleplus_hcount' displayText='Google +' st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
+        <iframe src="http://ghbtns.com/github-btn.html?user=gisto&repo=gisto&type=fork&count=true"
+                allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
 
+        <iframe src="http://ghbtns.com/github-btn.html?user=gisto&repo=gisto&type=watch&count=true"
+                allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
     </div>
 
     <div class="row">
