--- a/download/index.html
+++ b/download/index.html
@@ -17,7 +17,7 @@ title: Downloads | Gisto
                 <nav>
                     <ul>
                         <li><a href="#mirror">Mirror</a></li>
-                        <li><a href="#prevs">Previous version</a></li>
+                        <li><a href="#prevs">Previous versions</a></li>
                     </ul>
                 </nav>
             </div>
