--- a/features/index.html
+++ b/features/index.html
@@ -18,11 +18,11 @@ title: Features | Gisto
                 <h3>GitHub Integration</h3>
 
                 <p>
-                    Gisto works on GitHub infrastructure, everything you do at Gisto is automatically updated at GitHub.
+                    Gisto works using GitHub gists infrastructure, any change you make is automatically updated at GitHub.
                 </p>
 
                 <p>
-                    If you don't have access to your computer you can browse normally at GitHub to get all you need.
+                    If you don't have access to your computer you can browse normally at GitHub to view everything you've created.
                 </p>
             </div>
 
@@ -31,26 +31,18 @@ title: Features | Gisto
                 <h3>Gist tagging</h3>
 
                 <p>
-                    Gisto allows to tag each gist with unlimited number of tags.
-                </p>
-
-                <p>
-                    Tags can be used for simply sorting gist snippets into groups for what makes it easy to search and
-                    maintain.
+                    Gisto allows you to tag gists with custom tags this helps you find your gists easily and categorize
+                    them upon your needs.
                 </p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
                 <img alt="Gisto" src="../images/edit.png"/>
-                <h3>Quick Editing</h3>
+                <h3>Quick Sharing</h3>
 
                 <p>
-                    Gisto contains rich code editors, for editing on the go just when you need that quick change and don't
-                    want to open your development environment.
-                </p>
-
-                <p>
-                    Drag and drop support for files right inside Gisto! just drag files to the application to create a gist.
+                    Gisto allows you to quickly download,copy and view your gists on GitHub websites, In addition you can also generate
+                    embed links or view your gists on plunkr.
                 </p>
             </div>
 
@@ -64,12 +56,7 @@ title: Features | Gisto
                 <h3>Search</h3>
 
                 <p>
-                    Gists can be filtered by search filter from within the application.
-                </p>
-
-                <p>
-                    Searching criteria may be gist's description, file name / extention, tag or by public/secret status of a
-                    gist.
+                    Gists can be found quickly using our search filter and can be filtered by a gist description, file names, tags and more.
                 </p>
             </div>
 
@@ -77,14 +64,15 @@ title: Features | Gisto
                 <img src="../images/drag.png" alt="Gisto"/>
                 <h3>Drag &amp; Drop</h3>
 
-                <p>Files can be dragged into Gisto from your desktop and dropped inside the gist - this will add the file to gist.</p>
+                <p>Gisto supports drag and drop support for your files, you can drop files or directories into existing or new gists alike
+                   to add new files to gists.</p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
                 <img src="../images/themes.png" alt="Gisto"/>
                 <h3>Color themes</h3>
 
-                <p>Several color themes available in dark and light flavors.</p>
+                <p>Several color themes are available with both dark and light flavors.</p>
 
             </div>
 
@@ -94,29 +82,28 @@ title: Features | Gisto
         <div class="w-row">
 
             <div class="w-col w-col-4 w-clearfix feat">
-                <img src="../images/offline.png" alt="Gisto"/>
-                <h3>Open gist with ...</h3>
+                <img src="../images/revisions.png" alt="Gisto"/>
+                <h3>Revision browser</h3>
 
                 <p>
-                    Open gist on gist.github.com, copy file from a gist to clipboard, Copy &lt;embed&gt; code to clipboard,
-                    open gist in plunker and more...
+                    The revision browser enables you to see all previous changes to the gist as well as changes statistics and
+                    viewing the revision as it were at that time.
                 </p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
                 <img src="../images/ace.png" alt="Gisto"/>
-                <h3>Great editor</h3>
+                <h3>Rich editor</h3>
 
-                <p>Thanks to <a href="http://ace.c9.io/">ACE</a> editor - gist files can be highlighted and dome aspects of
-                    the editor can be changed via settings.</p>
+                <p>Thanks to <a href="http://ace.c9.io/">ACE</a> editor - you can edit gists using a rich code editor featuring syntax highlighting, auto-completion, emmet and more .</p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
                 <img src="../images/share.png" alt="Gisto"/>
-                <h3>Share gist</h3>
+                <h3>Sharing gists</h3>
 
-                <p>Send gist between Gisto installations, users with Gisto will be notified and be able to fork or preview
-                    sent gist.</p>
+                <p>You can send and receive gists between Gisto users very easily, all you need is the recipient GitHub username.</p>
+                <p>The recipient will receive a notification and will be able to fork the gist if he wishes.</p>
             </div>
         </div>
 
