--- a/faq/index.html
+++ b/faq/index.html
@@ -19,9 +19,8 @@ title: Frequently asked questions | Gisto
                         <li><a class="innsite" href="#q2">Authentication</a></li>
                         <li><a class="innsite" href="#q3">Do you use backend server?</a></li>
                         <li><a class="innsite" href="#q4">Who can see my gists?</a></li>
-                        <li><a class="innsite" href="#q5">Do you plan to support / add support for [future-name-here]?</a></li>
-                        <li><a class="innsite" href="#q6">Why Gisto exists?</a></li>
-                        <li><a class="innsite" href="#q7">Under the hood</a></li>
+                        <li><a class="innsite" href="#q5">Do you plan to support / add support for
+                            [future-name-here]?</a></li>
                         <li><a class="innsite" href="#q8">Issues, bug reporting and pull and feature requests</a></li>
                     </ul>
                 </nav>
@@ -32,7 +31,7 @@ title: Frequently asked questions | Gisto
 
                 <h2 id="q2">Authentication</h2>
 
-                <p>Gisto authenticates to GitHub by using basic authentication over SSL and retrieving an oAuth2 token.
+                <p>Gisto authenticates to GitHub by using basic authentication over SSL and retrieving an oAuth2 token
                     Thus the need for your GitHub user and password.</p>
 
                 <p>Gisto only saves the oAuth2 token received after authenticating and nothing else.
@@ -47,31 +46,31 @@ title: Frequently asked questions | Gisto
                 <p>Gisto is using GitHub gist API and communicates directly with Github, no 3rd party server or database
                     involved in gist management. </p>
 
-                <p>However we do use server for notifications and sharing service, the only data is stored is username
+                <p>However we do use a server for notifications and sharing service, the only data is stored is username
                     and gist ID and this is to allow gisto to notify user if there are shares waiting for him/her to
                     accept.
                 </p>
 
+                <p>The server code is in the repository should you wish to run an alternative server.</p>
+
                 <h2 id="q4">Who can see my gists?</h2>
 
-                <p>Gisto ipsum codelor app sit a met.</p>
+                <p>As per GitHub Guidelines gists are not private and are available to the public.</p>
+
+                <p>The difference between secret and public gists is that public gists are listed on GitHub website for
+                    public viewing and searching while secret gists are not</p>
 
 
                 <h2 id="q5">Do you plan to support / add support for [<i>future-name-here</i>]?</h2>
 
-                <p>Gisto ipsum codelor app sit a met.</p>
-
-                <h2 id="q6">Why Gisto exists?</h2>
-
-                <p>Gisto started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code snippet solution. You may think of Gisto as Evernote for code.</p>
-
-                <h2 id="q7">Under the hood</h2>
-
-                <p>Gisto ipsum codelor app sit a met.</p>
+                <p>Please open a feature request in our <a
+                        href="https://github.com/Gisto/Gisto/issues">issue tracker</a>, we appreciate and strive for
+                    suggestions on how to improve Gisto.</p>
 
                 <h2 id="q8">Issues, bug reporting and pull and feature requests</h2>
 
-                <p>Please feel free to add a bug / feature request / suggestions to the <a href="https://github.com/Gisto/Gisto/issues">issue tracker</a>.
+                <p>Please feel free to add a bug / feature request / suggestions to the <a
+                        href="https://github.com/Gisto/Gisto/issues">issue tracker</a>.
                     Pull requests are also very welcome as well.
                 </p>
 
