--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
         <div class="w-row">
 
             <div class="w-col w-col-4 w-clearfix feat">
-                <img src="../images/themes.png"/>
+                <img alt="Gisto" src="../images/edit.png"/>
 
-                <h3>UI themes</h3>
+                <h3>Rich Editor</h3>
 
-                <p>Several UI themes available in dark and light flavors.</p>
-                <p>Themes are not layout based, rather color shades of fonts and elements for now. This may change in the future.</p>
+                <p>
+                    Gisto includes Ace a rich code editor for editing your gists on the go
+                    and includes features such as syntax highlighting auto-completion emmet and more.
+                </p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
@@ -23,10 +25,10 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 
                 <h3>Search</h3>
 
-                <p>Gists can be filtered by search filter from within the application.
-                    </p>
-<p>
-    Searching criteria may be gist's description, file name / extention, tag or by public/secret status of a gist.</p>
+                <p>
+                    Gists can be found quickly using our search filter and can be filtered by a gist description, file
+                    names, tags and more.
+                </p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
@@ -34,11 +36,9 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 
                 <h3>Tags</h3>
 
-                <p>Gisto allows to tag each gist with unlimited number of tags.
-                </p>
-
-                <p>Tags can be used for simply sorting gist snippets into groups for what makes it easy to search and
-                    maintain.
+                <p>
+                    Gisto allows you to tag gists with custom tags this helps you find your gists easily and categorize
+                    them upon your needs.
                 </p>
             </div>
 
@@ -59,36 +59,35 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
     <div class="w-container">
         <div class="w-row">
 
-            <div class="w-col w-col-3 w-clearfix">
-                <h3>The <b>what</b></h3>
-
-                <p>Gisto is a cross platform. It can run on Windows, OSX and linux. It runs and acts exactly the same on each platform.</p>
-            </div>
-
-            <div class="w-col w-col-3 w-clearfix">
-                <h3>The <b>why</b></h3>
-
-                <p>Gisto started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code
-                    snippet solution.
-
-                    You may think of Gisto as Evernote for code.</p>
-            </div>
-
-            <div class="w-col w-col-3 w-clearfix the-who">
-                <h3>The <b>who</b></h3>
+            <div class="w-col w-col-4 w-clearfix">
+                <h3><b>why</b></h3>
 
                 <p>
-                    Gisto is developed by a team of two web developers and uses web standard technologies such as HTML5
-                    and JavaScript.
+                    Gisto started by fulfilling a lack of a syntax highlighted and cloud synchronized code
+                    snippet solution.
+                </p>
+            </div>
+
+            <div class="w-col w-col-4 w-clearfix the-who">
+                <h3><b>who</b></h3>
+
+                <p>
+                    Gisto is developed by a team of two web developers on their spare time.
+                </p>
+
+                <p>
+                    We appreciate any suggestions or contributions to make Gisto better.
                 </p>
 
             </div>
 
-            <div class="w-col w-col-3 w-clearfix">
-                <h3>The <b>how</b></h3>
+            <div class="w-col w-col-4 w-clearfix">
+                <h3><b>how</b></h3>
 
-                <p>Gisto made using HTML5/CSS3 it is built with Angular.js on top of Node.js runned by node-webkit.
-                    Gisto also uses Angular UI, jQuery, Ace editor, showdown and Font-Awesome</p>
+                <p>
+                    Gisto is built using the open web technologies using several open source projects such as
+                    AngularJS, node-webkit, Ace Editor and many more
+                </p>
             </div>
 
         </div>
@@ -107,7 +106,7 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
             {% assign current_version=v.version %}
             {{ current_version }}
             {% endif %}
-            {% endfor %} - <b>RELESED:</b> {{ site.gisto_build_date }}</p>
+            {% endfor %} - <b>RELEASED:</b> {{ site.gisto_build_date }}</p>
         <br/>
 
         <div class="w-container">
@@ -120,7 +119,6 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 
                     <h3>Windows<br/> <b>Download</b></h3>
 
-                    <p>Packed with automatic installer.</p>
                 </a>
 
                 <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86.dmg"
@@ -129,7 +127,6 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 
                     <h3>OSX<br/> <b>Download</b></h3>
 
-                    <p class="txt-center">Packed with automatic installer.</p>
                 </a>
 
                 <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.tar.gz"
@@ -138,7 +135,6 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 
                     <h3>Linux 64bit<br/> <b>Download</b></h3>
 
-                    <p class="txt-center">Packed with automatic installer via shell.</p>
                 </a>
 
                 <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.tar.gz"
@@ -147,7 +143,6 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
 
                     <h3>Linux 32bit<br/> <b>Download</b></h3>
 
-                    <p>Packed with automatic installer via shell.</p>
                 </a>
 
             </div>
