--- a/documentation/index.html
+++ b/documentation/index.html
@@ -55,42 +55,41 @@ title: Documentation | Gisto
                             href="https://github.com/rogerwang/node-webkit#downloads">Node-webkit</a> - app runtime
                         based on Chromium and node.js
                     </li>
-                    <li class="icons-li"><i class="icon-chevron-sign-right"></i> <a href="http://gruntjs.com/">Grunt</a> - the
-                        JavaScript Task Runner
+                    <li class="icons-li"><i class="icon-chevron-sign-right"></i>
+                        <s><a href="http://gruntjs.com/">Grunt</a> - the
+                        JavaScript Task Runner</s> <a href="http://gulpjs.com/">gulp.js</a> - The streaming build system
+
                     </li>
                     <li class="icons-li"><i class="icon-chevron-sign-right"></i> <a href="http://gruntjs.com/">MongoDB</a> - NoSQL Database
                     </li>
                 </ul>
                 <h2>Set it all to work together:</h2>
 
-                <p>- Clone the latest source with the following command to a directory of your choice:</p>
+                <p><i class="icon-chevron-sign-right"></i> Clone the latest source with the following command to a directory of your choice:</p>
                 <pre><span>SHELL</span>git clone https://github.com/Gisto/Gisto.git</pre>
-                <p>- Enter into the newly created directory:</p>
+                <p><i class="icon-chevron-sign-right"></i> Enter into the newly created directory:</p>
                 <pre><span>SHELL</span>cd Gisto</pre>
-                <p>- Run:</p>
+                <p><i class="icon-chevron-sign-right"></i> Run:</p>
                 <pre><span>SHELL</span>npm install</pre>
                 <p>this will install all necessary dependencies.</p>
 
-                <p>- Run:</p>
-                <pre><span>SHELL</span>grunt --env=dev</pre>
+                <p><i class="icon-chevron-sign-right"></i> Run:</p>
+                <pre><span>SHELL</span>gulp</pre>
                 <p>This will switch the file layout to development state (all files are concatenated)</p>
+                <p class="center-holder"> - or - </p>
+                <pre><span>SHELL</span>gulp dev</pre>
+                <p>This will switch the file layout to development state, show current version and start the server</p>
 
-                <p>- You can download a 'web-server.js' script used in AngularJS phonecat tutorial to gisto
-                    directory.</p>
-
-                <p>- Run:</p>
-                <pre><span>SHEL</span>node web-server.js</pre>
-
-                <p>- Run the notifications server: (optional)</p>
-                <p>Configure the notification server tokens: you will find 2 config file samples, one in the app directory and another in the server directory.
+                <p><i class="icon-chevron-sign-right"></i> Run the notifications server: (optional)</p>
+                <p>Configure the notification server tokens: you will find 2 config file samples, one in the <i>app</i> directory and another in the <i>server</i> directory.
                 Fill in a random token which matches in both files (This is used for client authentication)</p>
                 <p>Start a mongoDB instance</p>
-                <p>- Run:</p>
+                <p><i class="icon-chevron-sign-right"></i> Run:</p>
                 <pre><span>SHELL</span>mongod</pre>
                 <p>Start the nodejs notifications server</p>
                 <pre><span>SHELL</span>node server/app.js</pre>
 
-                <p>- Navigate your Chrome/Chromium browser to http://localhost:8000/app/index.html</p>
+                <p><i class="icon-chevron-sign-right"></i> Navigate your Chrome/Chromium browser to http://localhost:8080/app/index.html</p>
                 <p>Or you may optionally run using node-webkit directly on the app directory using the <a target="_blank" href="https://github.com/rogerwang/node-webkit/wiki/How-to-run-apps">Following instructions from node-webkit</a> </p>
                 <h4><b>Congratulations!</b> If all went well, you are now running local version of Gisto in your machine.</h4>
             </div>
