--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
         </div>
         <div class="center-holder">
             <a href="features/" class="btn bg-grey txt-white btn-center">
-                All features <i class="icon-arrow-right"></i>
+                More features <i class="icon-arrow-right"></i>
             </a>
         </div>
     </div>
